--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,6 @@
 
 @theme {
   --font-inter: Inter, sans-serif;
+  --color-contactme: oklch(24.78% 0 0);
+  --color-avocado-600: oklch(0.53 0.12 118.34);
 }
