--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --font-inter: Inter, sans-serif;
   --color-contactme: oklch(24.78% 0 0);
   --color-avocado-600: oklch(0.53 0.12 118.34);
+  --color-landing-gray: oklch(27.68% 0 0);
 }
 
 .gallery {
@@ -36,4 +37,125 @@
 
 .line {
   border-right: 1px solid black;
+}
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+.wrapper {
+  overflow-x: hidden;
+  position: relative;
+}
+* {
+  box-sizing: border-box;
+}
+.container {
+  display: flex;
+  width: 300vw;
+
+  .col {
+    display: flex;
+    gap: 3em;
+
+    p {
+      font-size: 0.8rem;
+    }
+  }
+
+  section {
+    width: 100vw;
+    padding: 20vw 10vw;
+
+    h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+
+    p {
+      font-size: 1.2rem;
+      width: 50vw;
+    }
+
+    ul {
+      list-style-type: none;
+      display: flex;
+      gap: 3em;
+      width: 100%;
+      height: 300px;
+      padding: 0;
+
+      li {
+        background: white;
+        border-radius: 0.3em;
+        flex-grow: 1;
+      }
+    }
+  }
+}
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+.scroll-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.panel {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
+.red {
+  background-color: red;
+  z-index: 1;
+}
+
+.yellow {
+  background-color: yellow;
+  z-index: 2;
 }
